assets/theme.css
html {
	font-size: 16px;
	box-sizing: border-box;
    font-family: sans-serif;
}

body {
	margin: 0;
	padding: 0;
}

/* Announcement Bar */

.announcement-bar-container {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 0 1vw;
}

.announcement-bar-right-section ul {
	display: flex;
	list-style: none;
	padding: 0;
}

.announcement-bar-right-section ul li {
	padding-left: 1vw;
}

.announcement-bar-right-section ul li a {
	color: inherit;
	text-decoration: none;
}

/* Navbar */

.navbar {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 1vh 1vw;
}

.middle-nav-bar {
	display: flex;
	list-style: none;
}

.middle-nav-bar li {
	margin-right: 0.75vw;
}

.middle-nav-bar li a {
	text-decoration: none;
	color: inherit;
	font-weight: 600;
    font-size: 0.875rem;
}

.right-nav-bar {
	display: flex;
	align-items: center;
	justify-content: space-around;
}

.right-nav-bar form {
	margin: 0;
}

.search-input {
	padding: 10px;
	background-color: rgb(233, 232, 232);
    border: none;
    border-radius: 10px;
    margin-top: 8px;
}

